--- a/coming-soon.html
+++ b/coming-soon.html
@@ -37,6 +37,19 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YE1QP2J46V"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YE1QP2J46V');
+</script>
+
 <body>
     <!-- Spinner Start -->
     <div id="spinner"
@@ -87,7 +100,8 @@
                 class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
-        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -100,7 +114,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
