--- a/upvc-doors-windows.html
+++ b/upvc-doors-windows.html
@@ -37,6 +37,19 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YE1QP2J46V"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YE1QP2J46V');
+</script>
+
 <body>
     <!-- Spinner Start -->
     <div id="spinner"
@@ -101,7 +114,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -189,8 +203,8 @@
                     <div class="about-img">
                         <img class="img-fluid" src="img/casement-upvc-windows-1.png" alt="Hotel-sadka-client-aleco"
                             title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/casement-upvc-windows-2.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
+                        <img class="img-fluid" src="img/casement-upvc-windows-2.png"
+                            alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -280,11 +294,13 @@
             <p>Traditionally, the windows and door market was dominated by steel. There is no doubt that steel is a
                 great material. However, uPVC has emerged as a better and eco-friendly alternative to steel. Here is why
                 uPVC windows /UPVC doors are better than steel ones.</p>
-            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted from raw
+            <p class="mb-4"><b>Environment Friendly</b> - uPVC windows/UPVC doors use far less energy to get converted
+                from raw
                 material to end product. On the other end, steel requires enormous energy to turn into an end-product.
                 This difference in energy consumption can run into tonnes.
             </p>
-            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a bad
+            <p class="mb-4">Apart from this, uPVC windows provide a <b>highly insulated environment</b> as plastic is a
+                bad
                 conductor of heat. On the other hand, steel is a good conductor of heat and winters/summers can be harsh
                 with steel windows.
             </p>
