--- a/about.html
+++ b/about.html
@@ -37,6 +37,19 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YE1QP2J46V"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YE1QP2J46V');
+</script>
+
 <body>
     <!-- Spinner Start -->
     <div id="spinner"
