--- a/railings-internal-partitions.html
+++ b/railings-internal-partitions.html
@@ -37,6 +37,19 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YE1QP2J46V"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YE1QP2J46V');
+</script>
+
 <body>
     <!-- Spinner Start -->
     <div id="spinner"
@@ -189,8 +202,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/frameless-door-alu.png" alt=""
-                            title="Hotel Sadka Amritsar">
+                        <img class="img-fluid" src="img/frameless-door-alu.png" alt="" title="Hotel Sadka Amritsar">
                         <img class="img-fluid" src="img/frameless-door-alu-2.png" alt=""
                             title="Mout Litera Zee School Amritsar">
                     </div>
