upvc page finalised

--- a/upvc-doors-windows.html
+++ b/upvc-doors-windows.html
@@ -201,21 +201,26 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/casement-upvc-windows-1.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/casement-upvc-windows-2.png"
+                        <img class="img-fluid" src="img/upvc-aleco-windows/casement-upvc-alecowindows-2.png"
+                            alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/casement-upvc-alecowindows-1.png"
                             alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-5 mb-4">1. Casement UPVC Windows</h1>
-                    <p>Casement windows are the most popular type of frame frames. They are also known as crank windows.
-                        These windows have hinges on the side walls structuree frame that allow them to swing inwards
-                        and outwards. Depending on the style of the frame, casement windows may complement classic or
-                        modern décor.</p>
-                    <p class="mb-4">This UPVC window design is lockable and thus built for safety. However, they are not
-                        the ideal choice if you're looking at installing window air conditioning units. You may also be
-                        in trouble if you leave the windows open on a rainy day.
+                    <p>Transform your home with Casement UPVC Windows!</p>
+                    <p class="mb-4">Our casement windows are designed to provide maximum energy efficiency and security,
+                        while adding a touch of sophistication to your home. The easy-to-operate hinges and secure
+                        locking system ensure a tight seal, keeping your home comfortable and safe.
+                    </p>
+                    <p class="mb-4">The UPVC material used in our casement windows is durable and low-maintenance,
+                        making them the perfect choice for busy homeowners. And with a range of colors and finishes to
+                        choose from, you can easily match them to your existing decor.
+                    </p>
+                    <p class="mb-4">Upgrade your home with Casement UPVC Windows today! Say goodbye to drafty old
+                        windows and hello to energy efficiency and style. Contact us for a free consultation and let us
+                        help you find the perfect casement windows for your home.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -223,23 +228,29 @@
 
             <div class="row g-3">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">2. Fixed UPVC Window Design</h1>
-                    <p>Fixed windows or picture windows are self-explanatory. These windows are permanently fixed and do
-                        not open or close. Since they are fixed, they may be any size of shape and require minimal
-                        hardware.</p>
-                    <p class="mb-4">Their function is mainly ornamental and to bring in natural light into the room
-                        while keeping dust, pollution and noise outside. Fixed UPVC windows with grills are often
-                        installed in staircases, bathrooms, attics and hallways. They are also installed in rooms that
-                        have alternative ventilation systems.
+                    <h1 class="display-5 mb-4">2. Sliding Mechanism</h1>
+                    <p>Elevate your home with Sliding Doors and Windows!</p>
+                    <p class="mb-4">Our sliding doors and windows offer the perfect blend of style and functionality.
+                        The smooth gliding motion and sleek design make them a beautiful addition to any home. And with
+                        a range of sizes and materials to choose from, you can easily find the perfect match for your
+                        style and needs.
+                    </p>
+                    <p class="mb-4">These versatile doors and windows provide the ultimate indoor-outdoor connection.
+                        Whether you're entertaining guests or just enjoying a quiet moment, the unobstructed view of the
+                        outdoors will make you feel like you're one with nature.
+                    </p>
+                    <p class="mb-4">Say goodbye to cumbersome traditional doors and windows and upgrade to Sliding Doors
+                        and Windows today! Contact us for a free consultation and see the difference for yourself.
+                        Experience the convenience and beauty of sliding doors and windows in your home.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-4.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-5.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/sliding-upvc-aleco-windows-1.png"
+                            alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/sliding-upvc-aleco-windows-2.png"
+                            alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
             </div>
@@ -247,18 +258,26 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-6.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-7.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/Flyscreen-upvc-aleco-1.png"
+                            alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/Flyscreen-upvc-aleco-2.png"
+                            alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">3. Tilt and Turn UPVC Windows</h1>
-                    <p>Tilt-and-Turn UPVC window design is extremely low-maintenance. These windows function by tilting
-                        inwards or away from the frame to optimise airflow.</p>
-                    <p class="mb-4">They are suitable for controlled ventilation in open, spacious areas of the house.
-                        You can also use them in tight spaces where ventilation needs to be controlled.
+                    <h1 class="display-5 mb-4">3. Flyscreen Windows</h1>
+                    <p>Bring the outdoors in with our Flyscreen Windows!</p>
+                    <p class="mb-4">Enjoy fresh air and natural light without the hassle of pesky insects. Our flyscreen
+                        windows provide a perfect balance of style and functionality. The durable, fine mesh screen
+                        keeps unwanted bugs out while allowing a clear view of the outdoors.
+                    </p>
+                    <p class="mb-4">Our flyscreen windows are easy to use and low maintenance, making them the perfect
+                        choice for busy homeowners. With a range of designs and colors to choose from, they'll also add
+                        a touch of elegance to any room.
+                    </p>
+                    <p class="mb-4">Upgrade your home with Flyscreen Windows today! Say goodbye to stuffy rooms and
+                        hello to natural ventilation. Contact us for a free consultation and let us help you find the
+                        perfect flyscreen windows for your home.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
@@ -266,22 +285,29 @@
 
             <div class="row g-3">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">4. Sliding UPVC Windows</h1>
-                    <p>Sliding UPVC window design is a great space savers for modern apartments. They can be fitted to
-                        slide horizontally or vertically and may be short or tall. What matters most is that the window
-                        frames follow parallel lio that they can slide easily.</p>
-                    <p class="mb-4">Sliding windows have movable panes or have one fixed and one sliding panel. You can
-                        even have multiple panels that slide against each other. Another alternative combination of
-                        glass and mesh is in the frames.
+                    <h1 class="display-5 mb-4">4. BI Fold Mechanism</h1>
+                    <p>Introducing the perfect solution for your home renovation: Bi-Fold Windows!</p>
+                    <p class="mb-4">Upgrade your living space with these sleek and stylish windows. Our bi-fold windows
+                        not only add a modern touch to your home, but they also provide the ultimate convenience. With a
+                        simple push or pull, they easily fold in half, allowing for an unobstructed view of the outdoors
+                        and seamless indoor-outdoor living.
+                    </p>
+                    <p class="mb-4">Our bi-fold windows are designed to provide maximum energy efficiency, keeping your
+                        home comfortable all year round. And with a range of colors and finishes to choose from, you can
+                        easily match them to your existing decor.
+                    </p>
+                    <p class="mb-4">Don't settle for ordinary windows, upgrade to Bi-Fold Windows today! Contact us for
+                        a free consultation and see the difference for yourself. Experience the convenience and beauty
+                        of bi-fold windows in your home.
                     </p>
                     <a class="btn btn-primary py-3 px-5" href="./index.html#enquiry">Send Enquiry</a>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-8.png" alt="Hotel-sadka-client-aleco"
-                            title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/about-9.png" alt="Mount-litera-Zee-school-Amritsar"
-                            title="Mout Litera Zee School Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/bi-fold-windows-aleco-2.png"
+                            alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
+                        <img class="img-fluid" src="img/upvc-aleco-windows/bi-fold-windows-aleco-1.png"
+                            alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
             </div>
