adding desc for projects

--- a/project.html
+++ b/project.html
@@ -147,6 +147,42 @@
     </div>
     <!-- Page Header End -->
 
+    <div class="container-xxl project py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-5 mb-4">We are leading the market!</h1>
+            </div>
+            <div>
+                <p>Our doors and windows company is proud to have been a part of numerous successful projects in the
+                    industry. Our team of experts is dedicated to providing high-quality products and exceptional
+                    customer service. Some of our notable achievements include:
+                    <ul>
+                        <li>Successfully completing large-scale residential projects, providing customized doors and
+                            windows
+                            to over 100 homes.</li>
+
+                        <li>Partnering with leading contractors and architects to deliver top-notch commercial projects,
+                            including office buildings and shopping centers.</li>
+
+                        <li>Introducing energy-efficient doors and windows, which have been well-received by both
+                            residential and commercial clients, resulting in lower energy costs and improved
+                            sustainability.</li>
+
+                        <li>Receiving positive feedback from clients and industry professionals for our attention to
+                            detail
+                            and commitment to meeting tight project deadlines.</li>
+
+                        <li>Expanding our product line to include a wider range of materials, styles, and colors, to
+                            better
+                            meet the needs and preferences of our customers.</li>
+                    </ul>
+                    We are committed to continuing to provide top-quality products and service to our clients and look
+                    forward to many more successful projects in the future.
+                </p>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Project Start -->
     <div class="container-xxl project py-5">
