--- a/upvc-doors-windows.html
+++ b/upvc-doors-windows.html
@@ -9,10 +9,10 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
-    <link rel="manifest" href="./img/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="././img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="././img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="././img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="././img/favicons/site.webmanifest">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +56,7 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png"
+        <img class="position-absolute top-50 start-50 translate-middle" src="./img/icons/logo-aleco-doors-and-windows.png"
             alt="Icon">
     </div>
     <!-- Spinner End -->
@@ -96,8 +96,8 @@
     <nav style="gap: 10px;" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
-                class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
+            <img class="me-3 logo-img" src="././img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
+                class="me-3 logo-img-mob" src="././img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
         <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse"
@@ -151,7 +151,7 @@
     <!-- Page Header Start -->
     <div class="container-xxl py-4 wow fadeInUp" data-wow-delay="0.1s">
         <div>
-            <img src="./img/upvc-doors-windows-aleco.png" width="
+            <img src="././img/upvc-doors-windows-aleco.png" width="
                 100%" alt="upvc-doors-windows-aleco">
         </div>
     </div>
@@ -164,7 +164,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-2.png" alt="Icon">
+                            <img src="./img/icons/icon-2.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Weather Resistance</h3>
                         <p class="mb-0">Aleco's ongoing Development of Material Technology gives you long lasting
@@ -174,7 +174,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-3.png" alt="Icon">
+                            <img src="./img/icons/icon-3.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Maintainance Free</h3>
                         <p class="mb-0">Aleco's windows and doors do not require regular re-painting and expensive
@@ -184,7 +184,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="fact-item text-center bg-light h-100 p-5 pt-0">
                         <div class="fact-icon">
-                            <img src="img/icons/icon-4.png" alt="Icon">
+                            <img src="./img/icons/icon-4.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">High Security</h3>
                         <p class="mb-0">Our advance fittings, glazing and expert installation provides enhanced security
@@ -201,9 +201,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/casement-upvc-alecowindows-2.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/casement-upvc-alecowindows-2.png"
                             alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/casement-upvc-alecowindows-1.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/casement-upvc-alecowindows-1.png"
                             alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -247,9 +247,9 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/sliding-upvc-aleco-windows-1.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/sliding-upvc-aleco-windows-1.png"
                             alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/sliding-upvc-aleco-windows-2.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/sliding-upvc-aleco-windows-2.png"
                             alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -258,9 +258,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" style="padding-bottom: 20px;" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/Flyscreen-upvc-aleco-1.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/Flyscreen-upvc-aleco-1.png"
                             alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/Flyscreen-upvc-aleco-2.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/Flyscreen-upvc-aleco-2.png"
                             alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -304,9 +304,9 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/bi-fold-windows-aleco-2.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/bi-fold-windows-aleco-2.png"
                             alt="Hotel-sadka-client-aleco" title="Hotel Sadka Amritsar">
-                        <img class="img-fluid" src="img/upvc-aleco-windows/bi-fold-windows-aleco-1.png"
+                        <img class="img-fluid" src="./img/upvc-aleco-windows/bi-fold-windows-aleco-1.png"
                             alt="Mount-litera-Zee-school-Amritsar" title="Mout Litera Zee School Amritsar">
                     </div>
                 </div>
@@ -406,7 +406,7 @@
 
     <!-- Back to Top -->
     <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services."
-        class="btn btn-lg btn-primary btn-lg-square back-to-top"><img src="./img/whatsapp-aleco-windows-amritsar.png"
+        class="btn btn-lg btn-primary btn-lg-square back-to-top"><img src="././img/whatsapp-aleco-windows-amritsar.png"
             alt="aleco-whatsapp" /></a>
     <div id="wa-box" class="wa-float back-to-top">
         <i onclick="closeWA()" class="bi bi-x"></i>
