adding projects exp

--- a/project.html
+++ b/project.html
@@ -150,36 +150,44 @@
     <div class="container-xxl project py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h4 class="section-title">Our Experience</h4>
                 <h1 class="display-5 mb-4">We are leading the market!</h1>
             </div>
-            <div>
-                <p>Our doors and windows company is proud to have been a part of numerous successful projects in the
-                    industry. Our team of experts is dedicated to providing high-quality products and exceptional
-                    customer service. Some of our notable achievements include:
-                    <ul>
-                        <li>Successfully completing large-scale residential projects, providing customized doors and
-                            windows
-                            to over 100 homes.</li>
+            <section style="display: flex;gap: 30px;">
+                <div style="width: 60%;">
+                    <p>Our doors and windows company is proud to have been a part of numerous <b>successful projects</b>
+                        in the industry. Our team of experts is dedicated to providing <b>high-quality</b> products and
+                        exceptional customer service. Some of our notable achievements include:
+                        <ul>
+                            <li>Successfully completing large-scale residential projects, providing customized doors and
+                                windows
+                                to over 100 homes.</li>
 
-                        <li>Partnering with leading contractors and architects to deliver top-notch commercial projects,
-                            including office buildings and shopping centers.</li>
+                            <li>Partnering with <b>leading contractors and architects</b> to deliver top-notch commercial
+                                projects,
+                                including office buildings and shopping centers.</li>
 
-                        <li>Introducing energy-efficient doors and windows, which have been well-received by both
-                            residential and commercial clients, resulting in lower energy costs and improved
-                            sustainability.</li>
+                            <li>Introducing <b>energy-efficient doors and windows</b>, which have been well-received by both
+                                residential and commercial clients, resulting in lower energy costs and improved
+                                sustainability.</li>
 
-                        <li>Receiving positive feedback from clients and industry professionals for our attention to
-                            detail
-                            and commitment to meeting tight project deadlines.</li>
+                            <li>Receiving <b>positive feedback from clients and industry professionals</b> for our attention to
+                                detail
+                                and commitment to meeting tight project deadlines.</li>
 
-                        <li>Expanding our product line to include a wider range of materials, styles, and colors, to
-                            better
-                            meet the needs and preferences of our customers.</li>
-                    </ul>
-                    We are committed to continuing to provide top-quality products and service to our clients and look
-                    forward to many more successful projects in the future.
-                </p>
-            </div>
+                            <li>Expanding our product line to include a <b>wider range of materials, styles, and colors</b>, to
+                                better
+                                meet the needs and preferences of our customers.</li>
+                        </ul>
+                        We are committed to continuing to provide <b>top-quality products</b> and service to our clients and
+                        look
+                        forward to many more successful projects in the future.
+                    </p>
+                </div>
+                <div>
+                    <img width="100%" src="https://fakeimg.pl/500x400" alt="">
+                </div>
+            </section>
         </div>
     </div>
 
