--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                         <div class="col-12 col-sm-6">
                             <div class="time" id="time" data-target-input="nearest">
                                 <input type="text" id="timeEI" class="form-control datetimepicker-input"
-                                    placeholder="Choose Date" data-target="#time" data-toggle="datetimepicker"
+                                    placeholder="Choose Time" data-target="#time" data-toggle="datetimepicker"
                                     style="height: 55px;">
                             </div>
                         </div>
